Adds getFlexibleFitHash api function Optimizes itemNameToId
