# routes/api.php
@@ -24,7 +24,8 @@
     Route::prefix("conduit/v1/")->middleware('auth:sanctum')->group(function() {
 
 
-        Route::get("ping", [ConduitController::class, 'ping']);
+        Route::any("ping", [ConduitController::class, 'ping']);
         Route::get("fits/list", [ConduitController::class, 'fitList']);
+        Route::post("fits/ffh/calculate", [ConduitController::class, 'getFlexibleFitHash']);
         Route::get("fits/get/{id}", [ConduitController::class, 'fitGet']);
     });
